[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/GravityBold8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/HUD/Tabs.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainLevel/HUD/TurretDisplayControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MainLevel/HUD/UITabs.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MainLevel/HUD/UpgradeDisplayButton.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 12.0
content_margin_right = 7.0
content_margin_top = 6.0
content_margin_bottom = 8.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 16 )
modulate_color = Color( 1.1, 1.1, 1.1, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 12.0
content_margin_right = 7.0
content_margin_top = 6.0
content_margin_bottom = 8.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 16 )
modulate_color = Color( 1, 1, 1, 0.501961 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 8
outline_color = Color( 0.466667, 0.294118, 0.960784, 1 )
font_data = ExtResource( 1 )

[node name="UITabs" type="TabContainer"]
margin_top = 255.0
margin_right = 255.0
margin_bottom = 511.0
rect_rotation = -90.0
mouse_filter = 2
custom_styles/tab_fg = SubResource( 1 )
custom_styles/tab_disabled = SubResource( 2 )
custom_styles/tab_bg = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_bg = Color( 1, 1, 1, 0.5 )
custom_colors/font_color_fg = Color( 1.05, 1.05, 1.05, 1 )
tab_align = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 22.0
mouse_filter = 2

[node name="UpgradeDisplayButton" parent="Upgrade" instance=ExtResource( 5 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 10.0
margin_right = -4.0
margin_bottom = 70.0
rect_rotation = 90.0

[node name="UpgradeDisplayButton2" parent="Upgrade" instance=ExtResource( 5 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 74.0
margin_right = -4.0
margin_bottom = 134.0
rect_rotation = 90.0
upgrade = "better boring"

[node name="UpgradeDisplayButton3" parent="Upgrade" instance=ExtResource( 5 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_top = 9.99999
margin_right = -68.0
margin_bottom = 70.0
rect_rotation = 90.0
upgrade = "high explosives"

[node name="UpgradeDisplayButton5" parent="Upgrade" instance=ExtResource( 5 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_top = 9.99999
margin_right = -132.0
margin_bottom = 70.0
rect_rotation = 90.0
upgrade = "slow release"

[node name="UpgradeDisplayButton6" parent="Upgrade" instance=ExtResource( 5 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_top = 74.0
margin_right = -132.0
margin_bottom = 134.0
rect_rotation = 90.0
upgrade = "reinforced"

[node name="UpgradeDisplayButton4" parent="Upgrade" instance=ExtResource( 5 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_top = 74.0
margin_right = -68.0
margin_bottom = 134.0
rect_rotation = 90.0
upgrade = "medical"

[node name="Ordnance" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 22.0
mouse_filter = 2

[node name="TurretDisplayButton5" parent="Ordnance" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 10.0
margin_right = -3.99998
margin_bottom = 70.0
rect_rotation = 90.0
shortcut_in_tooltip = false
action_mode = 0
item = "100mm Shell"

[node name="TurretDisplayButton6" parent="Ordnance" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_top = 10.0
margin_right = -68.0
margin_bottom = 70.0
rect_rotation = 90.0
action_mode = 0
item = "mortars"

[node name="TurretDisplayButton7" parent="Ordnance" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_top = 10.0
margin_right = -132.0
margin_bottom = 70.0
rect_rotation = 90.0
action_mode = 0
item = "tear gas"

[node name="TurretDisplayButton8" parent="Ordnance" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -256.0
margin_top = 10.0
margin_right = -196.0
margin_bottom = 70.0
rect_rotation = 90.0
action_mode = 0
item = "health kit"

[node name="Turrets" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 22.0
mouse_filter = 2

[node name="TurretDisplayButton" parent="Turrets" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 10.0
margin_right = -4.00002
margin_bottom = 70.0
rect_rotation = 90.0
action_mode = 0

[node name="TurretDisplayButton2" parent="Turrets" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_top = 10.0
margin_right = -68.0
margin_bottom = 70.0
rect_rotation = 90.0
action_mode = 0
item = "sniper"

[node name="TurretDisplayButton3" parent="Turrets" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_top = 9.99999
margin_right = -132.0
margin_bottom = 70.0
rect_rotation = 90.0
action_mode = 0
item = "shotgun"

[node name="TurretDisplayButton4" parent="Turrets" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -256.0
margin_top = 9.99998
margin_right = -196.0
margin_bottom = 70.0
rect_rotation = 90.0
action_mode = 0
item = "rocket launcher"
[connection signal="base_upgrade_deselected" from="." to="Upgrade/UpgradeDisplayButton" method="_on_UITabs_base_upgrade_deselected"]
[connection signal="base_upgrade_deselected" from="." to="Upgrade/UpgradeDisplayButton2" method="_on_UITabs_base_upgrade_deselected"]
[connection signal="base_upgrade_deselected" from="." to="Upgrade/UpgradeDisplayButton3" method="_on_UITabs_base_upgrade_deselected"]
[connection signal="base_upgrade_deselected" from="." to="Upgrade/UpgradeDisplayButton5" method="_on_UITabs_base_upgrade_deselected"]
[connection signal="base_upgrade_deselected" from="." to="Upgrade/UpgradeDisplayButton6" method="_on_UITabs_base_upgrade_deselected"]
[connection signal="base_upgrade_deselected" from="." to="Upgrade/UpgradeDisplayButton4" method="_on_UITabs_base_upgrade_deselected"]
[connection signal="base_upgrade_selected" from="." to="Upgrade/UpgradeDisplayButton" method="_on_UITabs_base_upgrade_selected"]
[connection signal="base_upgrade_selected" from="." to="Upgrade/UpgradeDisplayButton2" method="_on_UITabs_base_upgrade_selected"]
[connection signal="base_upgrade_selected" from="." to="Upgrade/UpgradeDisplayButton3" method="_on_UITabs_base_upgrade_selected"]
[connection signal="base_upgrade_selected" from="." to="Upgrade/UpgradeDisplayButton5" method="_on_UITabs_base_upgrade_selected"]
[connection signal="base_upgrade_selected" from="." to="Upgrade/UpgradeDisplayButton6" method="_on_UITabs_base_upgrade_selected"]
[connection signal="base_upgrade_selected" from="." to="Upgrade/UpgradeDisplayButton4" method="_on_UITabs_base_upgrade_selected"]
[connection signal="tab_changed" from="." to="." method="_on_UITabs_tab_changed"]
[connection signal="upgrade_deselected" from="Upgrade/UpgradeDisplayButton" to="." method="_on_UpgradeDisplayButton_upgrade_deselected"]
[connection signal="upgrade_selected" from="Upgrade/UpgradeDisplayButton" to="." method="_on_UpgradeDisplayButton_upgrade_selected"]
[connection signal="upgrade_deselected" from="Upgrade/UpgradeDisplayButton2" to="." method="_on_UpgradeDisplayButton_upgrade_deselected"]
[connection signal="upgrade_selected" from="Upgrade/UpgradeDisplayButton2" to="." method="_on_UpgradeDisplayButton_upgrade_selected"]
[connection signal="upgrade_deselected" from="Upgrade/UpgradeDisplayButton3" to="." method="_on_UpgradeDisplayButton_upgrade_deselected"]
[connection signal="upgrade_selected" from="Upgrade/UpgradeDisplayButton3" to="." method="_on_UpgradeDisplayButton_upgrade_selected"]
[connection signal="upgrade_deselected" from="Upgrade/UpgradeDisplayButton5" to="." method="_on_UpgradeDisplayButton_upgrade_deselected"]
[connection signal="upgrade_selected" from="Upgrade/UpgradeDisplayButton5" to="." method="_on_UpgradeDisplayButton_upgrade_selected"]
[connection signal="upgrade_deselected" from="Upgrade/UpgradeDisplayButton6" to="." method="_on_UpgradeDisplayButton_upgrade_deselected"]
[connection signal="upgrade_selected" from="Upgrade/UpgradeDisplayButton6" to="." method="_on_UpgradeDisplayButton_upgrade_selected"]
[connection signal="upgrade_deselected" from="Upgrade/UpgradeDisplayButton4" to="." method="_on_UpgradeDisplayButton_upgrade_deselected"]
[connection signal="upgrade_selected" from="Upgrade/UpgradeDisplayButton4" to="." method="_on_UpgradeDisplayButton_upgrade_selected"]
[connection signal="item_deselected" from="Ordnance/TurretDisplayButton5" to="." method="_on_TurretDisplayButton_item_deselected"]
[connection signal="item_selected" from="Ordnance/TurretDisplayButton5" to="." method="_on_TurretDisplayButton_item_selected"]
[connection signal="item_deselected" from="Ordnance/TurretDisplayButton6" to="." method="_on_TurretDisplayButton_item_deselected"]
[connection signal="item_selected" from="Ordnance/TurretDisplayButton6" to="." method="_on_TurretDisplayButton_item_selected"]
[connection signal="item_deselected" from="Ordnance/TurretDisplayButton7" to="." method="_on_TurretDisplayButton_item_deselected"]
[connection signal="item_selected" from="Ordnance/TurretDisplayButton7" to="." method="_on_TurretDisplayButton_item_selected"]
[connection signal="item_deselected" from="Ordnance/TurretDisplayButton8" to="." method="_on_TurretDisplayButton_item_deselected"]
[connection signal="item_selected" from="Ordnance/TurretDisplayButton8" to="." method="_on_TurretDisplayButton_item_selected"]
[connection signal="item_deselected" from="Turrets/TurretDisplayButton" to="." method="_on_TurretDisplayButton_item_deselected"]
[connection signal="item_selected" from="Turrets/TurretDisplayButton" to="." method="_on_TurretDisplayButton_item_selected"]
[connection signal="item_deselected" from="Turrets/TurretDisplayButton2" to="." method="_on_TurretDisplayButton_item_deselected"]
[connection signal="item_selected" from="Turrets/TurretDisplayButton2" to="." method="_on_TurretDisplayButton_item_selected"]
[connection signal="item_deselected" from="Turrets/TurretDisplayButton3" to="." method="_on_TurretDisplayButton_item_deselected"]
[connection signal="item_selected" from="Turrets/TurretDisplayButton3" to="." method="_on_TurretDisplayButton_item_selected"]
[connection signal="item_deselected" from="Turrets/TurretDisplayButton4" to="." method="_on_TurretDisplayButton_item_deselected"]
[connection signal="item_selected" from="Turrets/TurretDisplayButton4" to="." method="_on_TurretDisplayButton_item_selected"]
